--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,4 +1,12 @@
 body {
-  background: #700000;
+  background-color: rgba(175, 233, 204, 0.2);
+}
+
+p {
+  color: #2ca066;
+}
+
+li {
+  color: #165033;
 }
 /*# sourceMappingURL=style.css.map */
